ci: diagnostic snapshot for run 25286978077 [skip ci]